--- a/Views/DeliverSignup/Document.cshtml
+++ b/Views/DeliverSignup/Document.cshtml
@@ -1,14 +1,19 @@
 ﻿@{
     ViewData["Title"] = "Document Verification";
-    Layout = ViewBag.Layout ?? "_DeliveryPartnerLayout";
+    Layout = ViewBag.Layout ?? "_DeliverRegisterLayout"; ;
 }
 
 <style>
     body {
-        background-color: white;
+        background: linear-gradient(135deg, #e3f2fd, #e1bee7);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
         margin: 0;
         padding: 0;
     }
+
 
     .form-container {
         display: flex;
