--- a/Views/OrderNotification/OrderReady.cshtml
+++ b/Views/OrderNotification/OrderReady.cshtml
@@ -71,14 +71,14 @@
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" id="modalButton">
-        Launch demo modal
+        Order Notification
     </button>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
-                <div class="container mt-5 d-flex justify-content-center">
+                <div class="d-flex justify-content-center">
                     <div class="card shadow" style="width:700px">
                         <div class="d-flex justify-content-between card-header ">
                             <h6 class="mb-0">1 New Order</h6>
