--- a/Views/Shared/_RestaurantLayout.cshtml
+++ b/Views/Shared/_RestaurantLayout.cshtml
@@ -53,8 +53,7 @@
 
                             <ul>
                                 <li class="nav-item"><a class="nav-link" asp-controller="Restaurant" asp-action="OrderReady"><i class="fa-solid fa-bowl-food me-1"></i>Order</a></li>
-                                @* <li class="nav-item"><a class="nav-link" asp-controller="Restaurant" asp-action="RegisteRres"><i class="fa-solid fa-square-list"></i> Restaurant</a></li> *@
-                                @* <li class="nav-item"><a class="nav-link" asp-controller="Restaurant" asp-action="DocumentRes">Order History</a></li> *@
+                                <li class="nav-item"><a class="nav-link" asp-controller="OrderHistory" asp-action="History">Order History</a></li>
                                 <li class="nav-item"><a class="nav-link" asp-controller="Menu" asp-action="Add">Menus</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Reporting</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Offers</a></li>
