--- a/Views/OrderHistory/History.cshtml
+++ b/Views/OrderHistory/History.cshtml
@@ -1,5 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    Layout = "~/Views/Shared/_RestaurantLayout.cshtml";
 }
+<h2 class="mt-5">Order History</h2>
