--- a/Views/Addrestaurant/home.cshtml
+++ b/Views/Addrestaurant/home.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Partner with Zomato</title>
+    <title>Partner with Foodie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -53,12 +53,12 @@
     <!-- Why Partner Section -->
     <div class="container-fluid bg-light">
         @* <div class="bg-light"> *@
-        <h2 class="text-center">Why should you partner with Zomato?</h2>
+        <h2 class="text-center">Why should you partner with Foodie?</h2>
         <div class="row d-flex flex-wrap justify-content-around mx-5 px-5">
             <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <img src="~/Uploads/546cc9c88402b3bc3b2980137b157d0a1724921700.png" class="rounded mb-5 " alt="Attract Customers">
                 <h3 class="text-center">Attract new customers</h3>
-                <p class="text-center">Reach the millions of people ordering on Zomato</p>
+                <p class="text-center">Reach the millions of people ordering on Foodie</p>
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center justify-content-center pt-2">
                 <img src="~/Uploads/91fdfc547485f6d3c09ba49a925d5ccd1724921680.png" class="rounded mb-5" alt="Delivery Convenience">
@@ -68,7 +68,7 @@
             <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <img src="~/Uploads/e191cfbc666ce9f4c9a0821aeb02d1161740726006.png" class="rounded mb-5 " style="height:240px;width:245px" alt="Onboarding Support">
                 <h3 class="text-center">Onboarding support</h3>
-                <p class="text-center">For any support, email us at merchantonboarding@zomato.com</p>
+                <p class="text-center">For any support, email us at merchantonboarding@foodie.com</p>
             </div>
         </div>
         @* </div> *@
